tdf#125881 DOCX import: handle list level after tracked deletion

to avoid bad numbering (for example import "II.1" instead of "I.3").

Commit cbd894925e6b9869baedcd6476484c14d3a3df87
"tdf#125319 DOCX track changes: don't change numbering" fixed losing
numbering after tracked deletion (for example, during switching off the
Show Changes mode or by DOCX export of the attached test document), but
not handling list levels still changed the numbering.

Change-Id: I67cd9459bc44e9bb470bfed6834be2e88edfe0d0